src/objects/CPQ_Available_Budget_Type_for_Quote__mdt.object
<CustomObject>
    <fields>
        <fullName>Budget_Types__c</fullName>
        <label>Budget Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Created_From__c</fullName>
        <label>Quote Created From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Agreement_Type__c</fullName>
        <label>Requested Agreement Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CPQ Available Budget Type for Quote</label>
    <pluralLabel>CPQ Available Budget Type for Quotes</pluralLabel>
</CustomObject>